# cpp_serial

./: CMakeLists.txt  README.md
examples/: basic_example.cpp
include/cpp_serial/: serial_backend.hpp  serial_port.hpp  serial_types.hpp
src/: default_backend.cpp  serial_port.cpp  windows_serial_backend.cpp
tests/: serial_port_test.cpp
